[project]
name = "Root-Analysis-Toolkit"
version = "0.0.1"
description = "Root Analysis Toolkit (ROALT) leveraging deep-learning based Root Segmentation (ROSE)"
authors = [
    {name = "JonathanvanSanten234275",email = "234275@buas.nl"},
    {name = "DenysBespalko231452",email = "231452@buas.nl"},
    {name = "AlexiKehayias232230",email = "232230@buas.nl"},
    {name = "JasonvanHamond232567",email = "232567@buas.nl"},
    {name = "IonutBoţoroga230036",email = "230036@buas.nl"}
]
keywords = [ "plants", "roots", "phenotyping", "toolkit", "AI" ]
license = {text = ""}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.3,<0.16.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
